[FIX/TEST] logo on mobile

--- a/javascript/css/style-mobile.css
+++ b/javascript/css/style-mobile.css
@@ -123,6 +123,7 @@ body, input, textarea, select
 		#header img
 		{
 			content:url("images/247.png");	
+			left:2%;
 			width: 60px;
     		height: 60px;	
     		position: relative;
